tests/negative/gold/primitive_test.gold
tests/negative/primitive_test.toit:4:13: error: Unknown primitive library 'some'

 #primitive.some.name
            ^~~~
tests/negative/primitive_test.toit:6:1: error: Primitive 'core:string_hash_code' takes 1 parameters

bar a b c d e f -> none:
^~~
tests/negative/primitive_test.toit:10:14: error: Unknown primitive library 'some'

  #primitive.some.name: |a b|
             ^~~~
tests/negative/primitive_test.toit:10:23: error: Failure blocks can take at most one argument
  #primitive.some.name: |a b|
                      ^
tests/negative/primitive_test.toit:11:11: error: Unresolved identifier: 'a'
    throw a
          ^
tests/negative/primitive_test.toit:14:19: error: Unknown primitive 'name' in library 'core'

  #primitive.core.name: |.a|
                  ^~~~
tests/negative/primitive_test.toit:14:26: error: Failure blocks can't have field-storing parameters
  #primitive.core.name: |.a|
                         ^~
tests/negative/primitive_test.toit:18:19: error: Unknown primitive 'name' in library 'core'

  #primitive.core.name: |a/int|
                  ^~~~
tests/negative/primitive_test.toit:18:26: error: Failure parameter can't have a type
  #primitive.core.name: |a/int|
                         ^
tests/negative/primitive_test.toit:22:19: error: Unknown primitive 'name' in library 'core'

  #primitive.core.name: |a = 499|
                  ^~~~
tests/negative/primitive_test.toit:22:26: error: Failure parameter can't have a default value
  #primitive.core.name: |a = 499|
                         ^
tests/negative/primitive_test.toit:26:18: error: Invalid primitive call
  #primitive.core.name.too_many: |a|
                 ^
tests/negative/primitive_test.toit:30:25: error: Unknown intrinsic 'not_existent'

  #primitive.intrinsics.not_existent
                        ^~~~~~~~~~~~
Compilation failed.
